# shelly

./: .gitignore  Cargo.toml  README.md  WRITING_HANDLERS.md  shelly-dev.sh
.amazonq/cli-agents/: shelly-dev.json  shelly.json
.cargo/: config.toml
handlers/: api.ts  cargo.ts  test-cargo.ts
setup/: Cargo.toml
setup/src/: main.rs
shelly/: Cargo.toml
shelly-mcp/: Cargo.toml
shelly-mcp/src/: lib.rs  main.rs
shelly-mcp/tests/: integration_test.rs  process_status_test.rs
shelly/.shelly/tests/: README.md
shelly/.shelly/tests/cargo/: build-error.toml  build-success.toml  error-with-line-numbers.toml  input-build-error.json  input-build-error.toml  input-build-success.json  input-build-success.toml  output-build-error.json  output-build-error.toml  output-build-success.json  output-build-success.toml
shelly/handlers/: README.md  api.ts  cargo.ts
shelly/src/: executor.rs  handler.rs  lib.rs  output.rs  process_manager.rs  runtime.rs  streaming_executor.rs  testing.rs
shelly/tests/: bash_test.rs
src/: handler.rs  lib.rs  runtime.rs
