[package]
name = "shelly-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
shelly = { path = "../shelly" }
tokio = { version = "1", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
rmcp = { version = "0.8", features = ["client", "server", "transport-child-process", "transport-io"] }
schemars = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0.100"
clap = { version = "4.0", features = ["derive"] }
dirs = "5.0"
shell-escape = "0.1"
