[package]
name = "shelly"
version = "0.1.0"
edition = "2021"

[dependencies]
deno_core = "0.312"
deno_ast = { version = "0.51", features = ["transpiling"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
