[package]
name = "shelly"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "shelly"
path = "src/bin/shelly.rs"

[dependencies]
deno_core = "0.312"
deno_ast = { version = "0.51", features = ["transpiling"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
shell-words = "1.1"
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
